--- a/package.json
+++ b/package.json
@@ -21,9 +21,14 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@types/d3": "^5.16.4",
+    "@types/lodash": "^4.14.167",
     "angular-plotly.js": "^3.0.0",
+    "d3": "^5.16.0",
+    "lodash": "^4.17.20",
     "plotly.js": "^1.58.4",
     "rxjs": "~6.6.0",
+    "three": "^0.124.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
