--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "PlotlyTest1": {
+    "DioptasWeb": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/PlotlyTest1",
+            "outputPath": "dist/DioptasWeb",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -62,18 +62,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "PlotlyTest1:build"
+            "browserTarget": "DioptasWeb:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "PlotlyTest1:build:production"
+              "browserTarget": "DioptasWeb:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "PlotlyTest1:build"
+            "browserTarget": "DioptasWeb:build"
           }
         },
         "test": {
@@ -111,18 +111,18 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "PlotlyTest1:serve"
+            "devServerTarget": "DioptasWeb:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "PlotlyTest1:serve:production"
+              "devServerTarget": "DioptasWeb:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "PlotlyTest1",
+  "defaultProject": "DioptasWeb",
   "cli": {
     "analytics": false
   },
