--- a/package.json
+++ b/package.json
@@ -21,13 +21,8 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
-    "@types/d3": "^5.16.4",
-    "@types/lodash": "^4.14.167",
-    "@types/socket.io-client": "^1.4.34",
-    "angular-plotly.js": "^3.0.0",
     "d3": "^5.16.0",
     "lodash": "^4.17.20",
-    "plotly.js": "^1.58.4",
     "rxjs": "~6.6.0",
     "socket.io-client": "^3.0.5",
     "three": "^0.124.0",
@@ -38,8 +33,12 @@
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/cli": "~11.0.2",
     "@angular/compiler-cli": "~11.0.1",
+    "@types/d3": "^6.3.0",
     "@types/jasmine": "~3.6.0",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^12.11.1",
+    "@types/socket.io": "^2.1.13",
+    "@types/socket.io-client": "^1.4.35",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -49,6 +48,7 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
+    "socket.io": "^3.1.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
