--- a/package.json
+++ b/package.json
@@ -21,34 +21,35 @@
     "@angular/platform-browser": "~12.0.5",
     "@angular/platform-browser-dynamic": "~12.0.5",
     "@angular/router": "~12.0.5",
-    "d3": "^6.5.0",
-    "lodash": "^4.17.20",
-    "rxjs": "~6.6.0",
-    "socket.io-client": "^3.0.5",
+    "css-what": "^5.0.1",
+    "d3": "^6.7.0",
+    "lodash": "^4.17.21",
+    "rxjs": "^6.6.7",
+    "socket.io-client": "^3.1.3",
     "three": "^0.127.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.5",
     "@angular/cli": "~12.0.5",
     "@angular/compiler-cli": "~12.0.5",
-    "@types/d3": "^6.3.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^12.11.1",
+    "@types/d3": "^6.7.1",
+    "@types/jasmine": "^3.7.7",
+    "@types/lodash": "^4.14.170",
+    "@types/node": "^12.20.15",
     "@types/socket.io": "^2.1.13",
-    "@types/socket.io-client": "^1.4.35",
-    "codelyzer": "^6.0.0",
+    "@types/socket.io-client": "^1.4.36",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.6.0",
     "protractor": "~7.0.0",
-    "socket.io": "^3.1.0",
+    "socket.io": "^3.1.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.2.4"
